Use the title for "CAPS LOCK is ON" notification.

Use the title text instead of multi line message for "CAPS LOCK is ON"
notification.
Primarily fix for MD style notification but also works properly in
the current style.

BUG=740813
TEST=manual

Change-Id: I9121ae49fcf77fa4e7092d4a6a354b1d1a21d04e